--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
         <div class="child"></div>
     </div>
 
+    <button id="hello">Example</button>
+    <button id="cancel">Cancel</button>
+    <div id="countdown"></div>
+    <button id="start">Start</button>
+
     <script src="./index.js"></script>
 </body>
 
