--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -27,7 +30,7 @@
     </ul> -->
 
     <!-- <p>Lorem ipsum dolor sit amet.</p> -->
-
+<!-- 
 
     <a href="http://google.com">Google</a>
 <div id="example"></div>
@@ -52,9 +55,14 @@
     <button id="hello">Example</button>
     <button id="cancel">Cancel</button>
     <div id="countdown"></div>
-    <button id="start">Start</button>
+    <button id="start">Start</button> -->
 
-    <script src="./index.js"></script>
+
+    <div class="square">
+
+    </div>
+
+    <script src="./index1.js"></script>
 </body>
 
 </html>
