--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 
 <head>
+
+    <style>
+      .done{
+          text-decoration: line-through;
+      }  
+    </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -57,10 +63,14 @@
     <div id="countdown"></div>
     <button id="start">Start</button> -->
 
-
+<!-- 
     <div class="square">
 
-    </div>
+    </div> -->
+
+<input type="text" id="in">
+<button id="bt">Add</button>
+
 
     <script src="./index1.js"></script>
 </body>
