--- a/index.html
+++ b/index.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-
+  <head>
     <style>
-      .done{
-          text-decoration: line-through;
-      }  
+      .done {
+        text-decoration: line-through;
+      }
     </style>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
+    <link rel="stylesheet" href="./style.css" />
+  </head>
 
-    <link rel="stylesheet" href="./style.css">
-</head>
-
-<body>
+  <body>
     <!-- <div style="background-color: red; padding-bottom: 10px;">
         <p style="background-color: blue;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt neque ea cumque deleniti, dolores <a style="background-color: green;" href="http://google.com">tempora</a> illo cupiditate saepe labore placeat, ut illum doloremque delectus ad. Corrupti debitis doloribus inventore harum.</p>
     </div>
@@ -36,7 +33,7 @@
     </ul> -->
 
     <!-- <p>Lorem ipsum dolor sit amet.</p> -->
-<!-- 
+    <!-- 
 
     <a href="http://google.com">Google</a>
 <div id="example"></div>
@@ -63,16 +60,13 @@
     <div id="countdown"></div>
     <button id="start">Start</button> -->
 
-<!-- 
-    <div class="square">
-
-    </div> -->
-
-<input type="text" id="in">
-<button id="bt">Add</button>
+    <!-- 
+    <div class="square">  </div> -->
 
 
-    <script src="./index1.js"></script>
-</body>
 
+    <input type="text" i />
+    <button >Add</button>
+    <script src="./index3.js"></script>
+  </body>
 </html>
